fix words wraping bugs on mobile

--- a/css/_carousel-section.css
+++ b/css/_carousel-section.css
@@ -187,6 +187,13 @@ a:hover {
 	top: 45%;
 }
 
+@media screen and (max-width: 500px) {
+	.carousel-caption {
+		right: 9%;
+		left: 9%;
+	}
+}
+
 .carousel-caption .title {
 	font-size: 96px;
 	text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
